# anime

./: .gitignore  .lycheecache  .prettierignore  404.html  CNAME  README.md  animelist.md  config.md  datautils.jl  feed.xml  index.html  index.md  lychee.toml  mal-style.md  package-lock.json  package.json  profile.md  pyproject.toml  robots.txt  sitemap.xml  utils.jl
_assets/: history.py  history.txt  sanity_check.py
_assets/blog/mal-style/: output.css  style.scss
_assets/export/: mangalist_1669298590_-_7702594.xml
_assets/mal-style/: output.css.map
_css/: main.css  mal.css
_css/root/: animelist.css  profile.css
_layout/: animelist.html  header.html
animelist/: index.html
assets/: calmap.py  heatmap.py  set_dates.py
assets/blog/mal-style/: output.css  output.css.map  style.scss
assets/export/: animelist_1669298588_-_7702594.xml
assets/mal-style/: output.css
blog/: 2023-new-year.md  index.html  index.md  mal-style.md
blog/2023-new-year/: index.html
blog/mal-style/: index.html
css/: mal.css
css/root/: profile.css
libs/katex/: katex.min.css
mal-style/: index.html
profile/: index.html
scripts/: animelist.py  heatmap.py  history.py  mal.py  sanity_check.py  stats.py
scripts/export/: animelist_1669298588_-_7702594.xml
src/: animelist.py  calmap.py  heatmap.py  history.txt  mal.py  set_dates.py  stats.py
src/export/: animelist_1669298588_-_7702594.xml  mangalist_1669298590_-_7702594.xml
tag/anime/: feed.xml  index.html
tag/cs/: feed.xml  index.html
tag/misc/: feed.xml  index.html
utils/: data.jl  mal.jl
(+2 files in other folders)
