[tool.poetry]
name = "anime"
version = "0.1.0"
description = "A self-hosted, static anime tracker akin to MyAnimeList."
authors = ["Stephen Huan <stephen03.huan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scipy = "^1.9.3"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
calmap = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
